--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h1 class="display-4">Książki</h1>
-      <p class="lead">Linki do pobrania książek raz z kluczami odpowiedzi.</p>
+      <p class="lead">Linki do pobrania książek wraz z kluczami odpowiedzi.</p>
     </div>
 
     <h1 class="mb-4 text-center">Oxford Sollutions</h1>
