--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<title>siteReaper</title>
+<title>BookReaper</title>
 <meta name="robots" content="noindex">
+<link rel="icon" type="image/x-icon" href="./icon.ico"/>
 </head>
 <body>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
