--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>BookReaper</title>
 <meta name="robots" content="noindex">
 <link rel="icon" type="image/x-icon" href="./icon.ico"/>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -16,7 +17,7 @@
     
     <div class="container">
       <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Ćwiczenia</h4>
           </div>
@@ -30,7 +31,7 @@
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=10iQxftR5nSicHjf9eUkhpjyrDju3LJ30" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Podręcznik</h4>
           </div>
@@ -44,7 +45,7 @@
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=10eOxt2NgR1SPDDtOe4rR52NXDo5Xlm7j" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Teacher's book</h4>
           </div>
@@ -58,7 +59,7 @@
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=1bsqsDhyo6Pj_nCHNJDhtNHB6kshvATdX" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
             <div class="card-header">
               <h4 class="my-0 font-weight-normal">Answer key</h4>
             </div>
