--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <li>Upper Intermediate</li>
               <li>Student's Book</li>
             </ul>
+            <a target="_blank" href="https://drive.google.com/file/d/10iQxftR5nSicHjf9eUkhpjyrDju3LJ30/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=10iQxftR5nSicHjf9eUkhpjyrDju3LJ30" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
@@ -42,6 +43,7 @@
               <li>Upper-Intermediate</li>
               <li>Workbook</li>
             </ul>
+            <a target="_blank" href="https://drive.google.com/file/d/10eOxt2NgR1SPDDtOe4rR52NXDo5Xlm7j/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=10eOxt2NgR1SPDDtOe4rR52NXDo5Xlm7j" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
@@ -56,6 +58,7 @@
               <li>Upper-Intermediate</li>
               <li>Teacher's book</li>
             </ul>
+            <a target="_blank" href="https://drive.google.com/file/d/1bsqsDhyo6Pj_nCHNJDhtNHB6kshvATdX/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=1bsqsDhyo6Pj_nCHNJDhtNHB6kshvATdX" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
@@ -70,6 +73,7 @@
                 <li>Upper-Intermediate</li>
                 <li>Answer key</li>
               </ul>
+              <a target="_blank" href="https://drive.google.com/file/d/1CeAolCAvaVtf_zEsxmwXVtt7UHO1v_sA/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
               <a target="_blank" href="https://docs.google.com/uc?export=download&id=1CeAolCAvaVtf_zEsxmwXVtt7UHO1v_sA" class="btn btn-lg btn-block btn-primary">Pobierz</a>
             </div>
           </div>
