--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
               <li>Upper-Intermediate</li>
               <li>Teacher's book</li>
             </ul>
-            <a target="_blank" href="https://drive.google.com/file/d/1bsqsDhyo6Pj_nCHNJDhtNHB6kshvATdX/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
-            <a target="_blank" href="https://drive.google.com/uc?export=download&id=1bsqsDhyo6Pj_nCHNJDhtNHB6kshvATdX" class="btn btn-lg btn-block btn-primary">Pobierz</a>
+            <a target="_blank" href="https://drive.google.com/file/d/1U5ahZHwbUxXcunVLpSQDEiiGEwqv1BXW/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
+            <a target="_blank" href="https://docs.google.com/uc?export=download&id=1U5ahZHwbUxXcunVLpSQDEiiGEwqv1BXW" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
         <div class="card mb-4 shadow-sm hova">
