--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<title>siteReaper</title>
+<title>BookReaper</title>
 <meta name="robots" content="noindex">
+<link rel="icon" type="image/x-icon" href="./icon.ico"/>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h1 class="display-4">Książki</h1>
-      <p class="lead">Linki do pobrania książek wraz z kluczami odpowiedzi.</p>
+      <p class="lead">Linki do pobrania książek i kluczy odpowiedzi.</p>
     </div>
 
     <h1 class="mb-4 text-center">Oxford Sollutions</h1>
     
     <div class="container">
       <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Ćwiczenia</h4>
           </div>
@@ -26,10 +28,11 @@
               <li>Upper Intermediate</li>
               <li>Student's Book</li>
             </ul>
+            <a target="_blank" href="https://drive.google.com/file/d/10iQxftR5nSicHjf9eUkhpjyrDju3LJ30/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=10iQxftR5nSicHjf9eUkhpjyrDju3LJ30" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Podręcznik</h4>
           </div>
@@ -40,10 +43,11 @@
               <li>Upper-Intermediate</li>
               <li>Workbook</li>
             </ul>
+            <a target="_blank" href="https://drive.google.com/file/d/10eOxt2NgR1SPDDtOe4rR52NXDo5Xlm7j/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
             <a target="_blank" href="https://drive.google.com/uc?export=download&id=10eOxt2NgR1SPDDtOe4rR52NXDo5Xlm7j" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Teacher's book</h4>
           </div>
@@ -54,11 +58,11 @@
               <li>Upper-Intermediate</li>
               <li>Teacher's book</li>
             </ul>
-            <a target="_blank" href="https://drive.google.com/file/d/1U5ahZHwbUxXcunVLpSQDEiiGEwqv1BXW/view?usp=sharing" class="btn btn-lg btn-danger btn-primary">Czytaj</a>
-            <a target="_blank" href="https://drive.google.com/uc?export=download&id=1bsqsDhyo6Pj_nCHNJDhtNHB6kshvATdX" class="btn btn-lg btn-block btn-primary">Pobierz</a>
+            <a target="_blank" href="https://drive.google.com/file/d/1U5ahZHwbUxXcunVLpSQDEiiGEwqv1BXW/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
+            <a target="_blank" href="https://docs.google.com/uc?export=download&id=1U5ahZHwbUxXcunVLpSQDEiiGEwqv1BXW" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-4 shadow-sm hova">
             <div class="card-header">
               <h4 class="my-0 font-weight-normal">Answer key</h4>
             </div>
@@ -69,9 +73,43 @@
                 <li>Upper-Intermediate</li>
                 <li>Answer key</li>
               </ul>
+              <a target="_blank" href="https://drive.google.com/file/d/1CeAolCAvaVtf_zEsxmwXVtt7UHO1v_sA/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
               <a target="_blank" href="https://docs.google.com/uc?export=download&id=1CeAolCAvaVtf_zEsxmwXVtt7UHO1v_sA" class="btn btn-lg btn-block btn-primary">Pobierz</a>
             </div>
           </div>
       </div>
     </div>
-</body>
+    <h1 class="mb-4 text-center">Rzeszta książek</h1>
+    
+    <div class="container">
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 shadow-sm hova">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">FCE Uses of English</h4>
+          </div>
+          <div class="card-body">
+            <a target="_blank" href="https://drive.google.com/file/d/1Hs3KxhD3HWBwIdIwwk5OayRbjb0Dbh1z/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
+            <a target="_blank" href="https://drive.google.com/uc?export=download&id=1Hs3KxhD3HWBwIdIwwk5OayRbjb0Dbh1z" class="btn btn-lg btn-block btn-primary">Pobierz</a>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm hova">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Grammarway 3</h4>
+          </div>
+          <div class="card-body">
+            <a target="_blank" href="https://drive.google.com/file/d/1KFxpwQ-sUvkBKhkUAj55vXAyKeb2Du7b/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
+            <a target="_blank" href="https://drive.google.com/uc?export=download&id=1KFxpwQ-sUvkBKhkUAj55vXAyKeb2Du7b" class="btn btn-lg btn-block btn-primary">Pobierz</a>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm hova">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Grammarway 4</h4>
+          </div>
+          <div class="card-body">
+            <a target="_blank" href="https://drive.google.com/file/d/1r9qAUf9CKerzGpcBqi4oE_3O3sRSS3MZ/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
+            <a target="_blank" href="https://docs.google.com/uc?export=download&id=1r9qAUf9CKerzGpcBqi4oE_3O3sRSS3MZ" class="btn btn-lg btn-block btn-primary">Pobierz</a>
+          </div>
+        </div>
+    </div>
+    <img src="./santa.gif" class="santa">
+</body> 
