dodano książke, usunięto mikojaja

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
             <a target="_blank" href="https://docs.google.com/uc?export=download&id=1r9qAUf9CKerzGpcBqi4oE_3O3sRSS3MZ" class="btn btn-lg btn-block btn-primary">Pobierz</a>
           </div>
         </div>
+        <div class="card mb-4 shadow-sm hova">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Repetytorium</h4>
+          </div>
+          <div class="card-body">
+            <a target="_blank" href="https://drive.google.com/file/d/1Qo6dsJIFLA9mX9749Xc5hsmuL0zoZi8P/view" class="btn btn-lg btn-block btn-danger">Czytaj</a>
+            <a target="_blank" href="https://docs.google.com/uc?export=download&id=1Qo6dsJIFLA9mX9749Xc5hsmuL0zoZi8P" class="btn btn-lg btn-block btn-primary">Pobierz</a>
+          </div>
+        </div>
     </div>
-    <img src="./santa.gif" class="santa">
 </body> 
